# casino_times

./: .gitignore
cpp/: CMakeLists.txt  README.md
cpp/include/: dtw.hpp  dtw_index.hpp  parser.hpp  short_offset_ptr.hpp  tracer.hpp  utils.hpp  wavelet.hpp  wavelet_transformer.hpp  wavelet_tree.hpp
cpp/src/: calc_dtw_simple.cpp  create.cpp  dump_wavelet_index.cpp  exp_001.cpp  index_dtw.cpp  index_wavelet.cpp  normalize.cpp  parser.cpp  print_wavelet_tree.cpp  print_wavelet_tree2.cpp  query_dtw.cpp  query_dtw_indexed.cpp  query_dtw_simple.cpp  query_dtw_wavelet.cpp  scan.cpp  store.cpp  traceback.cpp  utils.cpp
julia/: img.jl  lib.jl  pruning_test.jl
julia_notebooks/: Untitled.ipynb  clean_up.ipynb  implementation.ipynb  pruning_viz.ipynb  wavelet_compression.ipynb
scripts/: all_store.sh  compare_dists.jl  do_entire_preparation.sh  do_entire_prepartion.sh  extract_stems.sh  filter.sh  firstcol_to_list.sh  get_trans.sh  prepare_dtw.jl  prune_support.jl  run_wavelet_compression_test.sh  stem.py  timeit.sh  transform_data.jl
tex/: .gitignore  README  sdqthesis.cls  thesis.bib  thesis.tex
tex/data/: clean_up.csv  compression_time_1.csv  compression_time_2.csv  compression_time_3.csv  compression_time_4.csv  compression_time_5.csv  dists_hist.csv  dists_sorted.csv  dtw_index.csv  dtw_index2.csv  hist.csv  lhist.csv  ngrams_ex2_compression_sorted.csv  ngrams_ex2_compression_unsorted.csv  ngrams_ex2_extrema.csv  ngrams_ex2_fitavg.csv  ngrams_ex2_grad.csv  ngrams_ex2_grad_smooth1.csv  ngrams_ex_log.csv  ngrams_ex_relative.csv  ngrams_ex_total.csv  ngrams_sums.csv  perf_qindexed_r.csv  perf_qsimple_r.csv  perf_qwavelet_me2_md4_mw0_r.csv  perf_qwavelet_me2_md5_mw0.0000000000001_r.csv  perf_qwavelet_me2_md5_mw0.0000001_r.csv  perf_qwavelet_me2_md5_mw0_r.csv  smoothing_frequencies.csv  tbindex.csv  tbindex2.csv  wavelet_compression.csv
tex/figures/: clean_up_sums.tex  compression.tex  compression2.tex  compression_timeline.tex  dists_hist.tex  dists_sorted.tex  dtw_fast.tex  dtw_index.tex  dtw_index2.tex  ngrams_ex2_compression_sorted.tex  ngrams_ex2_compression_unsorted.tex  ngrams_ex2_extrema.tex  ngrams_ex2_fitavg.tex  ngrams_ex2_grad.tex  ngrams_ex2_grad_smooth.tex  ngrams_ex_log.tex  ngrams_ex_relative.tex  ngrams_ex_total.tex  ngrams_hist.tex  ngrams_lhist.tex  ngrams_sums.tex  perf_baseline_r.tex  perf_ours_r.tex  smoothing_frequencies.tex  tbindex.tex  tbindex2.tex  tools.tex  wavelet_tree_example.tex  weakness.tex
tex/misc/: tree.tex  tree_data1.tex  tree_data2.tex
tex/sections/: abstract_de.tex  abstract_en.tex  algorithm.tex  appendix.tex  baseline.tex  conclusion.tex  declaration.tex  evaluation.tex  implementation.tex  introduction.tex  prior_work.tex
tex2/: .gitignore  convert_images.sh  presentation.tex
tex2/templates/: beamerthemekitbase.sty
tex_patched/: README  typearea.sty
utils/: just_do_it.sh  just_do_it2.sh  melt_gold.py
